Update GetApiByName provide option for user VEHMS-M01-T012